Improve speed, realiability and resource usage